# jv_compression_tool

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
compression_tool/: ___init__.py  build_tree.py  code_map.py  compressor.py  decompressor.py  file_compressor.py  file_decompressor.py  frequency.py  header.py  heapify.py  lookup.py  tree.py
compression_tool/utils/: bitutils.py  heapify.py
src/compression_tool/: ___init__.py  build_tree.py  code_map.py  header.py  tree.py
src/jv_compression_tool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bitutils.py  test_build_tree.py  test_code_map.py  test_compressor.py  test_decompressor.py  test_file_compressor.py  test_frequency.py  test_header.py  test_heapify.py  test_lookup.py  test_tree.py
