[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jv-compression-tool"
version = "0.1.0"
description = "Huffman compression implemented in pure Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jesse Vahlfors" }
]
keywords = ["huffman", "compression", "algorithm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/JesseVahlfors/jv_compression_tool"
Source = "https://github.com/JesseVahlfors/jv_compression_tool"

[tool.setuptools.packages.find]
where = ["src"]
